fix: schema of files

--- a/src/main/resources/com/example/clientserver/hello-view.fxml
+++ b/src/main/resources/com/example/clientserver/hello-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="595.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.clientserver.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="595.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.clientserver.controllers.HelloController">
 <children>
    <Label layoutX="127.0" layoutY="22.0" prefHeight="46.0" prefWidth="371.0" text="MY CHAT APPLICAIRON">
       <font>
